operating_systems/FAQ/1112/11/compiling_error.txt
3.c: In function ‘int main(int, char**)’:
3.c:31:27: error: expected primary-expression before ‘)’ token
     semctl(semid, GETALL, );
                           ^
3.c:36:73: error: taking address of temporary array
             while (!semop(semid, (struct sembuf[]) {{i, 0, SEM_UNDO}}, 1)) {
                                                                         ^
3.c:42:66: error: taking address of temporary array
                     {((*num) * (*num)) % nproc, -1, SEM_UNDO}}, 2);
                                                                  ^
3.c:48:58: error: taking address of temporary array
     semop(semid, (struct sembuf[]) {{0, -1, SEM_UNDO}}, 1);
                                                          ^
